styles/main.css
/*@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
/* @font-face {
  font-family: 'MyVariableOpenSans';
  src: url('fonts/OpenSans-VariableFont_wdth\,wght.ttf') format('ttf-variations');
  font-weight: 125 950;
  font-stretch: 75% 125%;
  font-style: normal;
 } */
#intro {
  /*background: url("../img/panorama-3094696_1920.jpg") no-repeat center center;*/
  /* background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),url("../img/intro/ywcc.jpg") no-repeat ; */ /* center center */
  /*background: url("") no-repeat center center; */
  /*background: grey no-repeat center center; */
  background-size: cover;
}
#intro_home {
  /*background: url("../img/panorama-3094696_1920.jpg") no-repeat center center;*/
  /* background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)),url("../img/intro/ywcc.jpg") no-repeat ; */ /* center center */
  /*background: url("") no-repeat center center; */
  /*background: grey no-repeat center center; */
  background-size: cover;
}
body {
  font-family: 'Open Sans','Helvetica Neue',  sans-serif;
  /* font-size: 12px; 
background-color: whitesmoke;*/
}

.top-nav-collapse {
  /* background-color: #ffffff !important; */ /*#3949ab */
}

.navbar:not(.top-nav-collapse) {
  /* background: transparent !important; */
}

/* @media (max-width: 768px) {
   .navbar:not(.top-nav-collapse) {
    background: transparent !important; // #3949ab 
  } 
} */

@media (min-width: 1140px)
  {
  #intro{
    height: 95vh;
  }
  .pages_research_block{
    height: 35vh; 
  }
  .pages_research_block_title{
    font-size:  3.5em; 
  }
  .pages_research_block_text{
    font-size: 2.2em;
  }
  .pages_research_block_heading{
    font-size: 3.6em;
  }
  .pages_research_block_heading_container{
    transform: translateY(40%);
  }
  .pages_research_block_details_container{
    transform: translateY(12vh);
  }
  .pages_research_block_conf{
    font-size: 1.5em;
  }
  /* .image_headers{
    height: 15%;
  }
  .image_main{
    height: 60%;
  }
  .image_titles{
    height: 25%;
  } */
}
@media (max-width: 1140px),
screen and (max-height:768px)
 {
  #intro{
    height: 95vh;
  }
  .pages_research_block{
    height: 35vh; 
  }
  .pages_research_block_title{
    font-size:  2.5em; 
  }
  .pages_research_block_text{
    font-size: 1.8em;
  }
  .pages_research_block_heading{
    font-size: 2.8em;
  }
  .pages_research_block_heading_container{
    transform: translateY(40%);
  }
  .pages_research_block_details_container{
    transform: translateY(12vh);
  }
  .pages_research_block_conf{
    font-size: 1.2em;
  }
  /* .image_headers{
    height: 15%;
  }
  .image_main{
    height: 60%;
  }
  .image_titles{
    height: 25%;
  } */
}
@media (max-width: 768px) {
  .hidenavbar{
    display: none;
  }
  .pages_research_block{
    height: 15vh; 
  }
  .pages_research_block_title{
    font-size: 2em;
  }
  .pages_research_block_text{
    font-size: 1.1em;
  }
  .pages_research_block_heading{
    font-size: 2.5em;
  }
  .pages_research_block_heading_container{
    transform: translateY(8vh);
  }
  .pages_research_block_details_container{
    transform: translateY(4vh);
  }
  .pages_research_block_conf{
    font-size: 1em;
  }
  /* .image_headers{
    height: 15%;
  }
  .image_main{
    height: 60%;
  }
  .image_titles{
    height: 25%;
  } */
}

/* Only for home page */
@media (min-width: 1600px) {
  #intro_home{
    height: 95vh;
  }
  /* .image_headers{
    height: 15%;
  }
  .image_main{
    height: 60%;
  }
  .image_titles{
    height: 25%;
  } */
}

.image_headers{
  font-weight: 650;
  font-size: 0.85em;
}
.image_titles{
  vertical-align: bottom;
}
.team_member_pic{
  border-radius: 50%;
}

.update_item{
  color: rgb(94,94,94);
  font-weight: normal;
}
.update_item_header{
  font-weight: bold;
}

.image_block{
  border: solid 1px gainsboro;
  border-radius: 3%;
  box-shadow:  1px 1px 1px 1px grey; 
}
.pages_research_block{
  border: solid 1px gainsboro;
  border-radius: 3%;
  box-shadow:  1px 1px 1px 1px grey; 
}
.lab_updates{
  /* width: 12.499999995%;
  flex: 0 0 12.499%;
  max-width: 12.499%;
  z-index:5; */
  font-size: 0.85em;

  /* margin-right:0.1px; */
}
.lab_updates1{
  padding: 0 !important;
}
.header_middle_part{
  padding: 0 !important;
}
.people_name{
  font-weight:550;
}
.people_designation{
  font-weight:450;
}
.people_department{
  font-weight:400;
}
.people_website{
  font-weight:400;
}
.people_email{
  font-weight:400;
}
ul {
  list-style: none;
}
li {
  margin: 0.25rem;
}
li::before {
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
  display: inline-block;
  line-height: 2rem;
  color: white;
  text-align: left;
  margin-right: 0.5rem;
}

#intro .h6 {
  /* font-weight: 300;
  line-height: 1.7; */
}
#intro_home .h6 {
  /* font-weight: 300;
  line-height: 1.7; */
}

/*.hm-gradient .full-bg-img {
  background: rgba(42, 27, 161, 0.7);
  background: linear-gradient(45deg, rgba(42, 27, 161, 0.7), rgba(29, 210, 177, 0.7) 100%);
}*/

@media (max-width: 450px) {
  .margins {
    margin-right: 1rem;
    margin-left: 1rem;
  }
}

#pricing .lead {
  opacity: 0.7;
}

#pricing .card-image {
  background: url("../img/architecture.jpg") no-repeat center center;
}

#pricing ul li {
  font-size: 1.1em;
}
.card-highlights {
  width: 100%;
  height: 10em;
  object-fit: fill;
}

.research_area_img{
  width: 100%;
  height: 100%/*15vw*/;
  object-fit: fill;
}
.research_area_img_long{
  width: 100%;
  height: 100%;/*15vw*/
  object-fit: contain;
}
.research_area_img_long1{
  width: 100%;
  height: 90%;/*15vw*/
  object-fit: contain;
}
/* .highlights_image{
  width: 100%;
  height: 100%;
  object-fit: contain;
} */
.highlights_image1{
  width: 100%;
  height: 200%;
  object-fit: stretch;
} 
.publications_link{
  text-decoration: none;
  color: inherit;
}
.publications_link1{
  text-decoration: none;
  color: black;
  font-weight: 500;
}
.publications_link1:hover{
  color: #0275d8;
}
.pages_project_image{
  width: 100%;
  height: 90%;
  /* vertical-align: middle; */
  object-fit: contain;
  transform: translateY(50%);
}
.pages_link{
  color: rgb(0, 128, 128)
}
.section_link{
  color: black;
  cursor:  pointer;
}

.description{
  /*letter-spacing: 0.05em; */
}

